Uploaded v3 of the website

--- a/index.html
+++ b/index.html
@@ -7,31 +7,101 @@
 	<meta name="description" content="Learn IT, Technology, Business, and Arts skills. Become highly employable and ready to start your own business! We have 6-month Short-Courses and long courses for up to 2 years in Software, IT, Business, English, Education, Arts, etc. We ensure employement and business opportunities for our top students!"/>
 	<script type="application/ld+json" src="scripts/structured-data/local-business.json"></script>
 	<link rel="stylesheet" type="text/css" href="css/layout.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 </head>
 <body>
 	<header>
 		<section id="topToolBar">
 			<a id="blog" rel="canonical"><img src="assets/blog.svg" alt"signInIcon"/>Blog</a>
-			<a id="signIn" rel="nofollow"><img src="assets/user-alt.svg" alt"signInIcon"/>Sign In</a>
+			<a id="signIn" rel="nofollow" href="apps/userprofile.html"><img src="assets/user-alt.svg" alt"signInIcon"/>Sign In</a>
 		</section>
-		<h1>Noor Institute Of Technology</h1>
+		<h1>NoorTech</h1>
 		<h2>Our Website is Under Development</h2>
 		<section id="newsStrips">
-			<marquee id="news">Admissions Open! Contact us at our Whatsapp 03322655937</marquee>
-			<marquee id="courseNews">Learn Web-Development in 6 months. Learn Full-Stack Software Engineering in 24 months. Learn English with us via our 6 month English Course.</marquee>
+			<!--<marquee id="news">Admissions Open! Contact us at our Whatsapp 03322655937</marquee>
+			<marquee id="courseNews">Learn Web-Development in 6 months. Learn Full-Stack Software Engineering in 24 months. Learn English with us via our 6 month English Course.</marquee>-->
 		</section>
 	</header>
 	<main>
-		<h1>Checkout our Flyers</h1>
-		<img src="assets/posters/NIT Computer Programming Courses.png" alt="programmingCoursesFlyer"/>
-		<img src="assets/posters/NIT English Language Course.png" alt="englishCoursesFlyer"/>
+		<section id="introSection">
+			<h1>Welcome to NoorTech</h1>
+			<h2>We Teach what others Don't</h2>
+			<hr class="red-vert-bar">
+			<ul id="introList">
+				<li id="firstIntro"><details open><summary><b>Learn</b> and <b>Master</b> Complete Skills</summary><p>While <b>other technology institutes</b> leave you hanging with <b>half-learned skills</b>, <b>we focus on</b> complete <b>mastery</b> of a skill. We provide <b class="green">excellent instruction</b> and guidance <b>every step of the way</b>. In <b>our courses</b> you will be guided through <b>advanced drills and methods</b> to <b>Master</b> each aspect of the skill.</p></li>
+				<li><details><summary>Focus on <b>High Earning</b> skills</summary><p>We carefully select the skills and course material we teach, keeping in mind <b>demand of skills</b> in the current market. We <b>prepare you</b> to <b class="blue">start your own Businesses</b> and/or <b>become a Feelancer</b> and work form Home.</p></li>
+				<li><details><summary>Get <b>Top Class</b> Education</summary><p>We use <b>Advance Education Theory</b> and <b>Psychology</b> to develop <b>easy-to-digest</b> lessons that <b class="green-90">Ensures the best Education</b> both in-house and online.</p></li>
+				<li><details><summary>Develop your <b>Portfolio</b></summary><p>Our courses end with an <b>Intensive Projects Module</b>. Each Project is used to develop <b>Your Portfolio</b>, which allows you to <b class="blue">Get jobs and market your work</b>. Your Portfolio is also visible on our <b>Gallery of Student Portfolios</b>.</p></li>
+				<li><details><summary>Hit the Ground Running</summary><p>During the course of your studies <b>we will teach and asist you</b> in the development of <b class="cyan">Your own Business or Freelance Presence</b>. We will help our students  get their first client by providing asistance and guidance. We ensure help until our students can do the work by themselves!</p></li>
+			</ul>
+			<hr>
+		</section>
+		<section>
+			<hr>
+			<h1>Our Programming Courses Are World Class</h1>
+			<h2>Coming Soon!</h2>
+			<hr>
+		</section>
+		<section>
+			<hr>
+			<h1>We have a wide collection of Fine Arts Courses</h1>
+			<h2>Coming Soon!</h2>
+			<hr>
+		</section>
+		<section>
+			<hr>
+			<h1>We have English Courses for Everybody</h1>
+			<h2>Coming Soon!</h2>
+			<hr>
+		</section>
+		<section>
+			<hr>
+			<h1>Learn Business and Marketing with Us!</h1>
+			<h2>Coming Soon!</h2>
+			<hr>
+		</section>
+		<section>
+			<hr>
+			<h1>Student Gallery</h1>
+			<h2>Coming Soon!</h2>
+			<hr>
+		</section>
+		<section>
+			<hr>
+			<h1>Online Classes</h1>
+			<h2>Coming Soon!</h2>
+			<hr>
+		</section>
+		<section>
+			<hr>
+			<h1>Contact Information</h1>
+			<hr>
+		</section>
+		<section>
+			<hr>
+			<h1>Franchise with Us!</h1>
+			<h2>Coming Soon!</h2>
+			<hr>
+		</section>
+		<section>
+			<hr>
+			<h1>Checkout our Flyers</h1>
+			<ul class="gallery">
+				<li>
+					<img src="assets/posters/NIT Computer Programming Courses.png" alt="programmingCoursesFlyer"/>
+					<div class="overlay"><span>Programming Courses</span></div>
+				</li>
+				<li>
+					<img src="assets/posters/NIT English Language Course.png" alt="englishCoursesFlyer"/>
+					<div class="overlay"><span>English Courses</span></div>
+				</li>
+			</ul>
+		</section>
 	</main>
 	<footer>
-		<p>&copy; S M Mohtashim Ahmed</p>
-		<section>Credits: Created by Ray & A Group Solutions<br>
-		Credits: Michael Fousert (Some Pictures | Unsplash)</section>
+		<p>&copy; 2022 S M Mohtashim Ahmed</p>
+		<section>Created by Ray & A Group Solutions<br>
+		</section>
 	</footer>
 	<script src="scripts/main.js" defer></script>
 </body>
