added relative like to UltraEditor App

--- a/apps/userprofile.html
+++ b/apps/userprofile.html
@@ -31,7 +31,7 @@
 			</select>
 		</div>
 		<div id="usefulLinks">
-			<a href="https://codepen.io/pen/" target="_blank" id="pen"><img src="../assets/pen.svg"/></a>
+			<a href="./ultraEditor.html" target="_blank" id="pen"><img src="../assets/pen.svg"/></a>
 			<a href="#" id="linkList"><img src="../assets/link.svg"/></a>
 			<a href="#" id="logOut"><img src="../assets/door-open.svg"/></a>
 		</div>
