--- a/apps/ultraEditor.html
+++ b/apps/ultraEditor.html
@@ -12,8 +12,8 @@
 		.horizontal-nav {display:flex;flex-flow:row nowrap;width:98vw;justify-content:flex-end;}
 		.editor-boxes {flex:1 0 auto;display:flex;flex-flow:row nowrap;}
 		.editor-boxes > * {height:100%;flex:1 0 auto;}
-		.editor {color:white;border:1px solid #dfdfdf;font-size:16px;}
-		.display {padding:0px 20px;background-color:#fff;border:1px solid #dfdfdf;margin:auto;padding:auto;}
+		.editor {color:white;border:1px solid #dfdfdf;font-size:16px;max-width:60vw;}
+		.display {padding:0px 20px;background-color:#fff;border:1px solid #dfdfdf;margin:auto;padding:auto;max-width:60vw;}
 		
 		main > nav {flex:0 0 auto;}
 		button {font-size:22px;margin: 2px 5px;color:white;border:none;border-radius:5px;padding:2px 5px;}
