set aside to hidden

--- a/apps/ultraEditor.html
+++ b/apps/ultraEditor.html
@@ -63,7 +63,7 @@
 			<button onclick="run();" class="run">Run</button>
 		</nav>
 	</main>
-	<aside id="imgColl" class="shown">
+	<aside id="imgColl" class="hidden">
 		<nav class="window-ops">
 			<button class="close-btn" onclick="hideImageCollection();">X</button>
 		</nav>
