--- a/apps/ultraEditor.html
+++ b/apps/ultraEditor.html
@@ -14,6 +14,10 @@
 		.editor-boxes > * {height:100%;flex:50%;}
 		.editor {color:white;border:1px solid #dfdfdf;font-size:1rem;text-overflow:clip;overflow-y:scroll;padding:10px;overflow-wrap:break-word;}
 		.display {padding:0px 20px;background-color:#fff;border:1px solid #dfdfdf;margin:auto;padding:auto;}
+		.display > img {max-width:30vw;}
+		.display > * > img {max-width:30vw;}
+		.display > * > * > img {max-width:30vw;}
+		.display > * > * > *> img {max-width:30vw;}
 		
 		main > nav {flex:0 0 auto;}
 		button {font-size:22px;margin: 2px 5px;color:white;border:none;border-radius:5px;padding:2px 5px;}
