made header more visible in mobile

--- a/apps/ultraEditor.html
+++ b/apps/ultraEditor.html
@@ -44,7 +44,9 @@
 		.image-list > li > img {width:40vw;margin:5px;border:5px dashed #dfdfdf;}
 
 		@media (orientation:portrait) {
-			.editor {font-size:2.5rem;}
+			.editor {font-size:1.7rem;}
+			header > h1 {font-size:1.5em;}
+			header > nav > button > img {height:1.5em;}
 			.editor-boxes {flex-flow:column nowrap;}
 			.editor-boxes > * {width:100%;height:auto;}
 		}
